--- a/modules/html/vars.less
+++ b/modules/html/vars.less
@@ -20,4 +20,4 @@
 @pink : #FE4C78;
 @rose : @pink; /* obsolete */
 
-@lemonav-height : 28 * @rem;
+@lemonav-height : 32 * @rem;
